--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -83,6 +83,10 @@
                         </p>
                         <p> Dr. Lalita Wadhwa - Div. of Congenital Heart Surgery, Baylor College of Medicine, Houston, TX, USA
                         </p>
+                        <p> Dr. Niraj Vij - Adjunct Associate Professor, Johns Hopkins Medicine
+                        <br/> Founder, Director, CEO, Precision Theranostics Inc., Baltimore, MD, USA.  
+                        <br/> President, CEO, VIJ Biotech, Baltimore, MD, USA.    
+                        </p>
                     </div>
                     <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                         style="margin-top: 40px;">
