--- a/speakers.html
+++ b/speakers.html
@@ -108,6 +108,32 @@
                 </p>
               </div>
             </div>
+
+            <div class="judges img right">
+              <!-- <img src="assets/Dr. N. S. Punekar.jpg" /> -->
+              <div class="team-content">
+                <h1></h1>
+                <br />
+                <p>
+                  <br />
+                </p>
+              </div>
+            </div>
+
+            <div class="judges img">
+              <div class="team-content">
+                <h1>Guest of Honor</h1>
+              </div>   
+              <br><br><br>
+              <img src="assets/rajeev.jpg" />
+              <div class="team-content">
+                <h1>Dr. Rajeev Raghuvanshi</h1>
+                <br />
+                <p>
+                  <br />Secretary-cum-Scientific Director at Indian Pharmacopoeia Commission
+                </p>
+              </div>
+            </div>
             <!-- <div class="judges img right">
               <img src="assets/speaker6.jpg" />
               <div class="team-content">
