--- a/speakers.html
+++ b/speakers.html
@@ -121,9 +121,7 @@
             </div>
 
             <div class="judges img">
-              <div class="team-content">
-                <h1>Guest of Honor</h1>
-              </div>   
+                <h2 color="#8fd9a8">Guest of Honor</h2>
               <br><br><br>
               <img src="assets/rajeev.jpg" />
               <div class="team-content">
