Resized some icons

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="description" content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
-  <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, utkarsh, aggarwal noida" />
+  <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, utkarsh, aggarwal, nikhil, paleti, noida" />
   <meta name="robots" content="index,follow" />
   <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
@@ -633,16 +633,22 @@
 
         <div class="head">
           <p></p>
-        </div>
+        </div> 
         <div class="sponsors">
           <div class="associate-sponsors">
-            <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
-            <a href="https://idma-assn.org/" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
-            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a> <br>
-            <a href="https://www.kppub.com/" target="_blank"> <img src="assets/kongposh.jpg"> </a> <br>
-            <a href="https://www.kppub.com/" style="font-size: 28.5px;" target="_blank"> Kongposh Publications </a>
+            <div class="spon-title p-1" >Knowledge Partners</div>
 
-            <div class="spon-title p-1" style="font-size: 60px; margin-top: 10vh;">Publishing Partners</div>
+            <div> 
+              <a href="https://idma-assn.org/" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
+              <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a> 
+            </div>
+            <div> 
+              <a href="https://www.kppub.com/" target="_blank"> <img src="assets/kongposh.jpg"> </a> <br>
+              <a href="https://www.kppub.com/" style="font-size: 28.5px;" target="_blank"> Kongposh Publications </a> 
+            </div>
+
+
+            <div class="spon-title p-1" style="margin-top: 10vh;">Publishing Partners</div>
             <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
             <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br>
             <a href="https://www.akinik.com/" target="_blank"> <img src="assets/akinik.jpg"> </a> <br>
