Added new names
New names added under "International Speakers" in the speakers.html file. 
Added corresponding assets too.

--- a/speakers.html
+++ b/speakers.html
@@ -82,6 +82,34 @@
             </div>
           </div>
 
+          <div class="team-row">
+            <div class="judges img">
+              <h2 color="#8fd9a8"> International Speakers </h2>
+            <br><br><br>
+            <img src="assets/megan_lord.jpg" />
+            <div class="team-content">
+              <h1> Megan Lord </h1>
+              <br />
+              <p>
+                <br />Associate Professor, Graduate School of Biomedical Engineering, UNSW Sydney
+              </p>
+            </div>
+          </div>
+
+          <div class="judges img right">
+            <h2 style="color: white;"> . </h2>
+            <br><br><br>
+            <img src="assets/Ajay-Karakotti_Web.jpg" />
+            
+            <div class="team-content">
+              <h1> Ajay Karakotti </h1>
+              <br />
+              <p>
+                <br /> Associate Professor, University of Newcastle, NSW, Australia
+              </p>
+            </div>
+          </div>
+
             <div class="judges img">
               <img src="assets/Prof Anirban Chakraborti.jpg" />
               <div class="team-content">
