--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,7 @@
         <div class="wrap"></div>
         <div class="wrap"></div>
         <div class="wrap"></div>
+        <div class="wrap"></div>
     </lines>
     <content>
       <div class="main-wrap past-photo" style="margin-bottom:15%;">
