--- a/publishing-partners.html
+++ b/publishing-partners.html
@@ -67,6 +67,7 @@
       <div class="wrap"></div>
       <div class="wrap"></div>
       <div class="wrap"></div>
+      <div class="wrap"></div>
     </lines>
     <content>
         <div class="main-wrap">
