--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
     <div class="wrap"></div>
     <div class="wrap"></div>
     <div class="wrap"></div>
+    <div class="wrap"></div>
   </lines>
   <content>
     <div class="header">
