--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -39,6 +39,7 @@
         <div class="wrap"></div>
         <div class="wrap"></div>
         <div class="wrap"></div>
+        <div class="wrap"></div>
     </lines>
     <content>
 
