Added another name

--- a/speakers.html
+++ b/speakers.html
@@ -171,6 +171,17 @@
                 </p>
               </div>
             </div>
+            <div class="judges img text-center right">
+              <img src="assets/Murugeshwar.jpg" />
+              <div class="team-content text-center">
+                <h1>Dr. R. Murugeshwar </h1>
+                <br />
+                <p>
+                  Deputy Director, M/o AYUSH, Govt. of India
+                </p>
+              </div>
+            </div>
+            
 
            
 
