Added yet another name
For history sake at this point - Dr. Dinesh in speakers.html

--- a/speakers.html
+++ b/speakers.html
@@ -167,7 +167,7 @@
                 <h1>Dr. N. S. Punekar</h1>
                 <br />
                 <p>
-                  <br />Professor at Indian Institute of Technology Bombay
+                  <br /> Professor at Indian Institute of Technology Bombay
                 </p>
               </div>
             </div>
@@ -178,6 +178,17 @@
                 <br />
                 <p>
                   Deputy Director, M/o AYUSH, Govt. of India
+                </p>
+              </div>
+            </div>
+
+            <div class="judges img text-center">
+              <img src="assets/dinesh.jpg" />
+              <div class="team-content text-center">
+                <h1>Dr. Dinesh Nagegowda</h1>
+                <br />
+                <p>
+                  <br /> Senior Principal Scientist, CSIR-CIMAP Research Centre, Bangalore
                 </p>
               </div>
             </div>
