--- a/registration.html
+++ b/registration.html
@@ -184,25 +184,6 @@
                           You will be notified once your abstract gets accepted.</p>
                   </div>
 
-                  <h2 class="text-center">ATTENDEE</h2>
-                    <p style="color: red;font-weight: bold; text-align: center;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
-                    </p></br>
-                    <div class="content-gray" style="display: block; margin-bottom:5%;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a href="registration-fees.html"><button>PROCEED WITH PAYMENT
-                                    </button></a>
-                        </p>
-                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
-                            acceptance mail of abstract within two weeks with a
-                            specific
-                            Abstract ID (ICABB ID)</p> -->
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a target="_blank"
-                                href="https://docs.google.com/forms/d/e/1FAIpQLSfXuY0ldpblKGQuDZrKfkO-aEQhxyupxeZFPc81-l9W3r59tA/viewform?usp=sf_link"><button>REGISTRATION FORM</button></a></p>
-                        <!-- <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                                target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
-                                    REGISTRATION FORM</button></a></p> -->
-                    </div>
-
                   <h2 class="text-center">SPEAKERS</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <!-- <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
@@ -227,6 +208,17 @@
 
                    </div>
 
+                   <!-- <h2 class="text-center"> INTERNAL FACULTY </h2>
+                    <div class="content-gray" style="display: block; margin-bottom:5%;">
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf3qNYUf4RY_KXhXpKsf6djxXMQz7WbArRaZ0KylC3J7yQFPw/viewform?usp=sf_link"><button>REGISTRATION
+                                    FORM</button></a>
+                        </p>
+                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                           You will be notified once your abstract gets accepted.</p> -->
+
+                   </div> -->
+
                    <h2 class="text-center">VOLUNTEERS</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
@@ -236,6 +228,25 @@
                         <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                            You will be notified once your abstract gets accepted.</p> -->
 
+                   </div>
+
+                   <h2 class="text-center">ATTENDEE</h2>
+                   <p style="color: red;font-weight: bold; text-align: center;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
+                   </p></br>
+                   <div class="content-gray" style="display: block; margin-bottom:5%;">
+                       <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                           <a href="registration-fees.html"><button>PROCEED WITH PAYMENT
+                                   </button></a>
+                       </p>
+                       <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
+                           acceptance mail of abstract within two weeks with a
+                           specific
+                           Abstract ID (ICABB ID)</p> -->
+                       <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a target="_blank"
+                               href="https://docs.google.com/forms/d/e/1FAIpQLSfXuY0ldpblKGQuDZrKfkO-aEQhxyupxeZFPc81-l9W3r59tA/viewform?usp=sf_link"><button>REGISTRATION FORM</button></a></p>
+                       <!-- <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                               target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
+                                   REGISTRATION FORM</button></a></p> -->
                    </div>
                   
                   
