--- a/speakers.html
+++ b/speakers.html
@@ -81,6 +81,7 @@
               <br />
               <p>
                 <br />
+                 <!-- THIS DIV IS ONLY FOR  PLACEHOLDER PURPOSE TO REPOSITION THE NEXT DIV TO THE  NEXT LINE -->
               </p>
             </div>
           </div>
@@ -111,6 +112,33 @@
               <br />
               <p>
                 <br /> Associate Professor, University of Newcastle, NSW, Australia
+              </p>
+            </div>
+          </div>
+
+          <div class="team-row">
+            <div class="judges img">
+            <br><br><br>
+            <div class="text-center">
+            <img src="assets/berret.jpg" />
+            </div>
+            <div class="team-content text-center">
+              <h1> Dr. Jean-François Berret </h1>
+              <br />
+              <p>
+                <br /> Directeur de Recherche, Université de Paris, UNSW Sydney
+              </p>
+            </div>
+          </div>
+
+          <div class="judges img text-center right">
+            <!-- <img src="assets/Dr. N. S. Punekar.jpg" /> --> 
+            <div class="team-content text-center">
+              <h1></h1>
+              <br />
+              <p>
+                <br /> 
+                <!-- THIS DIV IS ONLY FOR  PLACEHOLDER PURPOSE TO REPOSITION THE NEXT DIV TO THE  NEXT LINE -->
               </p>
             </div>
           </div>
@@ -147,7 +175,7 @@
                 <h1>Prof. Rup Lal</h1>
                 <br />
                 <p>
-                   Professor at North Campus DU, Delhi
+                   Professor at North Campus Delhi University, Delhi
                 </p>
               </div>
             </div>
