Changes to Visuals
//home.html
Added date and made minor adjustment in margins

//speakers.html
Sorted a minor margin issue and changed images

//registration.html 
Added commented code for upcoming form

And all the corresponding assets

--- a/speakers.html
+++ b/speakers.html
@@ -88,7 +88,7 @@
 
           <div class="team-row">
             <div class="judges img">
-              <h2 color="#8fd9a8"> International Speakers </h2>
+              <br><br><h2 color="#8fd9a8"> International Speakers </h2>
             <br><br><br>
             <div class="text-center">
             <img src="assets/megan_lord.jpg" />
@@ -144,7 +144,7 @@
           </div>
 
             <div class="judges img">
-              <h2 color="#8fd9a8"> National Speakers </h2>
+             <br><br> <h2 color="#8fd9a8"> National Speakers </h2>
               <br><br><br>
               <div class="text-center">
               <img src="assets/Prof Anirban Chakraborti.jpg" />
@@ -153,7 +153,7 @@
                 <h1>Prof. Anirban Chakraborti</h1>
                 <br />
                 <p>
-                  <br />Professor At Jawaharlal Nehru University, New Delhi
+                  Professor At Jawaharlal Nehru University, New Delhi
                 </p>
               </div>
             </div>
@@ -189,13 +189,14 @@
                 </p>
               </div>
             </div>
+            
             <div class="judges img text-center">
               <img src="assets/Dr. N. S. Punekar.jpg" />
               <div class="team-content text-center">
                 <h1>Dr. N. S. Punekar</h1>
                 <br />
                 <p>
-                  <br /> Professor at Indian Institute of Technology Bombay
+                   Professor at Indian Institute of Technology Bombay
                 </p>
               </div>
             </div>
