--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
             </p> -->
             
             <marquee scrollamount=15> (Theme: Innovations in Life Sciences and Computational Biology) </marquee>
-            <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
+            <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022 <br>  20-22 January 2022 </h1>
             
 
           </div>
