--- a/speakers.html
+++ b/speakers.html
@@ -158,7 +158,7 @@
               </div>
             </div>
             <div class="judges img text-center right">
-              <h2 style="color: white;"> . </h2>
+              <br><br><h2 style="color: white;"> . </h2>
               <br><br><br>
               <img src="assets/Prof Pawan Dhar.jpg" />
               <div class="team-content text-center">
