New Advisor - Dr. Sunita Aggarwal

--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -71,11 +71,13 @@
                         </p>
                         <p>Prof. D. K. Rai - Dean A&R, JIIT Noida, Noida, India
                         </p>
-                        <p>Prof. Jayesh Bellare - Dep. of Chemical Engineering, IIT Bombay, Mumbai, India
+                        <p>Prof. Jayesh Bellare - Dept. of Chemical Engineering, IIT Bombay, Mumbai, India
                         </p>
                         <p>Dr. D. K. Gupta - Founder, Felix Hospital, Noida, India
                         </p>
-                        <p>Prof. S. Panda - Dep. of Chemical Engineering, IIT Kanpur, Kanpur, India
+                        <p>Prof. S. Panda - Dept. of Chemical Engineering, IIT Kanpur, Kanpur, India
+                        </p>
+                        <p>Dr. Sunita Aggarwal - Associate Professor , Dept. of Microbiology,  Institute of Home Economics, New Delhi, India
                         </p>
                         <h3> International Advisors </h3>
                         <p> Dr. Nikunj Sharma - Regulatory Project Manager, US FDA, USA 
