--- a/registration.html
+++ b/registration.html
@@ -208,16 +208,16 @@
 
                    </div>
 
-                   <!-- <h2 class="text-center"> INTERNAL FACULTY </h2>
+                   <h2 class="text-center"> INTERNAL FACULTY </h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf3qNYUf4RY_KXhXpKsf6djxXMQz7WbArRaZ0KylC3J7yQFPw/viewform?usp=sf_link"><button>REGISTRATION
+                            <a target="_blank" href="https://forms.gle/sov4wtaja1QcDuxt9"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
                         <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                            You will be notified once your abstract gets accepted.</p> -->
 
-                   </div> -->
+                   </div>
 
                    <h2 class="text-center">VOLUNTEERS</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
