Alignment Changes and name changes
Dr. Chakresh Kumar Jain and Prof. Sudha Srivastava have been moved from Admin to Tech. 
The names box has been left-aligned, as it had to originally be

--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -233,7 +233,7 @@
 
 
 
-                    <div class="content-gray" style="margin-top: 40px;">
+                    <div class="content-gray" style="margin-top: 40px; align-items: flex-start;">
                         <h6 class="text-center" style="color: #4b778d;">OUR ORGANIZING TEAM
                         </h6>
 
@@ -252,6 +252,10 @@
                         </p>
                         <p>Dr. Smriti Gaur
                         </p>
+                        <p>Prof. Sudha Srivastava
+                        </p>
+                        <p>Dr. Chakresh Kumar Jain
+                        </p>
                         <!-- <p>Dr. Chakresh K. Jain
                         </p>
                         <p>Dr. Manisha Singh
@@ -259,8 +263,6 @@
 
                         <h3>ADMINISTRATIVE COMMITTEE</h3>
                         <p>Prof. S Krishna Sundari
-                        </p>
-                        <p>Prof. Sudha Srivastava
                         </p>
                         <p>Prof. Indira P Sarethy
                         </p>
@@ -273,8 +275,6 @@
                         <p>Dr Shalni Mani
                         </p>
                         <p>Dr. Vibha Gupta
-                        </p>
-                        <p>Dr. Chakresh Kumar Jain
                         </p>
                         <p>Dr. Priyadarshini
                         </p>
