Changed Berret's Location

--- a/speakers.html
+++ b/speakers.html
@@ -126,7 +126,7 @@
               <h1> Dr. Jean-François Berret </h1>
               <br />
               <p>
-                <br /> Directeur de Recherche, Université de Paris, UNSW Sydney
+                <br /> Directeur de Recherche, Université de Paris, Paris, France
               </p>
             </div>
           </div>
