Updated bank details
in registration-fee.html

--- a/registration-fees.html
+++ b/registration-fees.html
@@ -258,17 +258,17 @@
                             <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Name of the Account Holder</th>
-                                    <th scope="col">Jaypee Institute of Information Technology</th>
+                                    <th scope="col">Jaypee Institute of Info. Technology</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <th scope="row">Bank Name</th>
-                                    <td style="text-align: center;">ICICI BANK LTD</td>
+                                    <td style="text-align: center;">IDBI Bank Ltd</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Branch Name</th>
-                                    <td style="text-align: center;">CMS Mumbai</td>
+                                    <td style="text-align: center;">Noida</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Account Type</th>
@@ -276,11 +276,11 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">Account Number</th>
-                                    <td style="text-align: center;">JIITICABB21</td>
+                                    <td style="text-align: center;">109102000007436</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">IFSC Code</th>
-                                    <td style="text-align: center;">ICIC0000104</td>
+                                    <td style="text-align: center;">IBKL0000109</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -289,7 +289,10 @@
                     </div>
                 </div>
 
-
+                <!-- Bank Name :                       IDBI Bank Ltd. 
+Bank Account Number:      109102000007436 
+Beneficiary’s Name :          Jaypee Institute of Info. Technology
+IFSC code :                         IBKL0000109 -->
 
 
             </div>
