--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -93,6 +93,7 @@
                                 <li> Online posters and oral sessions </li>
                                 <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing </li>
                                 <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
+                                <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
                             </ul>
                         </div>
                     </div>
@@ -214,6 +215,7 @@
                                     <li> Conference Kit;  </li>
                                     <li> 1 conference lunch and 2 tea refreshments: for Attendee only </li>
                                     <li> 3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all other offline categories </li>
+                                    <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
                             </ul>
                         </div>
                     </div>
