Small additions to lists in callforabstract

--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -93,7 +93,6 @@
                                 <li> Online posters and oral sessions </li>
                                 <li> Publication of abstract in conference proceedings (with ISBN no.) only after peer reviewing </li>
                                 <li> Publication of invited articles/chapters in International Journal (VSRD publications, indexed) or full chapter in edited book (VSRD publications, ISBN no.) only after peer reviewing (sponsored by Organizers) </li>
-                                <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
                             </ul>
                         </div>
                     </div>
@@ -129,6 +128,10 @@
                                 </li>
                                 <li>Abstract IDs will be sent to your Email IDs. Participants can submit the fees after
                                     that.
+                                </li>
+                                <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
+                                <li>
+                                    One registration can submit two abstracts and the publication in the book and VSRD journal is free of cost after peer reviewing the chapters
                                 </li>
 
                             </ul>
@@ -215,7 +218,6 @@
                                     <li> Conference Kit;  </li>
                                     <li> 1 conference lunch and 2 tea refreshments: for Attendee only </li>
                                     <li> 3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all other offline categories </li>
-                                    <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
                             </ul>
                         </div>
                     </div>
@@ -251,6 +253,10 @@
                                 </li>
                                 <li>Abstract IDs will be sent to your Email IDs. Participants can submit the fees after
                                     that.
+                                </li>
+                                <li> Name your abstract file in the following nomenclature: name_sessionname_firt word of title_name if the institution </li>
+                                <li>
+                                    One registration can submit two abstracts and the publication in the book and VSRD journal is free of cost after peer reviewing the chapters
                                 </li>
 
                             </ul>
