--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -98,7 +98,7 @@
                       <h1>Dr. Yog Raj Sood</h1>
                       <br />
                       <p>
-                        <br />Pro-Chancellor, JIIT, Noida
+                        <br />Vice-Chancellor, JIIT, Noida
 
                       </p>
                     </div>
