--- a/schedule.html
+++ b/schedule.html
@@ -64,9 +64,14 @@
                             <img class="logo-sch" src="assets/icabb light.png" alt=""> 
                             <img class="logo1-sch" src="assets/logo1.png" alt="">
                         </div>
+
+                        
+                        <img class="jp-img" src="assets/Schedule-1.png" style="width:90%;" alt="">
+                        <img class="jp-img" src="assets/Schedule-2.png" style="width:90%;" alt="">
+                        <img class="jp-img" src="assets/Schedule-3.png" style="width:90%;" alt="">
                       
                       <!-- Jatin's Table Code (With some changes)  -->
-                        <p style="margin-top:0pt; margin-bottom:8pt; text-align:center; line-height:108%; font-size:16pt; clear: both;"><strong><span style="font-family:'Times New Roman'; color:#4472c4;">Scientific Programme</span></strong></p>
+                        <!-- <p style="margin-top:0pt; margin-bottom:8pt; text-align:center; line-height:108%; font-size:16pt; clear: both;"><strong><span style="font-family:'Times New Roman'; color:#4472c4;">Scientific Programme</span></strong></p>
                         <p style="margin-top:0pt; margin-bottom:8pt; text-align:center; line-height:108%; font-size:16pt;"><strong><span style="font-family:'Times New Roman'; color:#70ad47;">International Conference on&nbsp;</span></strong></p>
                         <p style="margin-top:0pt; margin-bottom:8pt; text-align:center; line-height:108%; font-size:16pt;"><strong><span style="font-family:'Times New Roman'; color:#70ad47;">Advances in Biosciences and Biotechnology</span></strong></p>
                         <p style="margin-top:0pt; margin-bottom:8pt; text-align:center; line-height:108%; font-size:16pt;"><strong><span style="font-family:'Times New Roman'; color:#70ad47;">ICABB-2022</span></strong></p>
@@ -339,7 +344,8 @@
                                 </td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
+                    <!-- End of Jatin's Code -->
 
                         <!-- <a  href="Scientific Programme_Website.pdf" target="_blank"
                         ><button>PROGRAMME SCHEDULE</button></a
