New brochure - Removed IARA
Removed IARA in Home and Publishing.html too.

--- a/home.html
+++ b/home.html
@@ -651,8 +651,8 @@
 
 
             <div class="spon-title p-1" style="margin-top: 10vh;">Publishing Partners</div>
-            <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
-            <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br>
+            <!-- <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
+            <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br> -->
             <a href="https://www.akinik.com/" target="_blank"> <img src="assets/akinik.jpg"> </a> <br>
             <a href="https://www.akinik.com/" style="font-size: 28.5px;" target="_blank"> Akinik Publications </a> <br>
             <a href="http://www.vsrdjournals.com/" target="_blank"> <img src="assets/VSRD_INTERNATIONAL_JOURNALS.jpg" id="vsrd"> </a> <br>
