--- a/publishing-partners.html
+++ b/publishing-partners.html
@@ -107,13 +107,13 @@
                             International Journal of Applied Research (Rs. 1500, Indexing in Research Gate, Google Scholar, CAS, Site factor and 20 more) 
                           </li>
                       </ul>
-                      <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
+                      <!-- <a href="http://iaraedu.com/about-journal/" target="_blank"> <img src="assets/iara.jpg"> </a> <br>
                       <a href="http://iaraedu.com/about-journal/" style="font-size: 28.5px;" target="_blank"> IARA - Indian Academicians and Research Association </a> <br>
                       <ul class="ul-guidelines">
                           <li>
                             Indian Journal of Natural Sciences ISSN: 0976-0997 (Rs. 4500, indexed in WoS)
                           </li>
-                      </ul>
+                      </ul> -->
                       
                       
                       Note: All the publications will be accepted only after peer reviewing process. The publication charges except VSRD category, will be borne by the authors.
