Murugeshwaran name fixes (Speakers.html)

--- a/speakers.html
+++ b/speakers.html
@@ -203,7 +203,7 @@
             <div class="judges img text-center right">
               <img src="assets/Murugeshwar.jpg" />
               <div class="team-content text-center">
-                <h1>Dr. R. Murugeshwar </h1>
+                <h1>Dr. R. Murugeswaran </h1>
                 <br />
                 <p>
                   Deputy Director, M/o AYUSH, Govt. of India
