--- a/speakers.html
+++ b/speakers.html
@@ -108,7 +108,7 @@
             <img src="assets/Ajay-Karakotti_Web.jpg" />
             
             <div class="team-content text-center">
-              <h1> Dr. Ajay Karakotti </h1>
+              <h1> Dr. Ajay Karakoti </h1>
               <br />
               <p>
                 <br /> Associate Professor, University of Newcastle, NSW, Australia
