--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -86,7 +86,7 @@
                         </p>
                         <p> Dr. Lalita Wadhwa - Div. of Congenital Heart Surgery, Baylor College of Medicine, Houston, TX, USA
                         </p>
-                        <p> Dr. Niraj Vij - Adjunct Associate Professor, Johns Hopkins Medicine
+                        <p> Dr. Neeraj Vij - Adjunct Associate Professor, Johns Hopkins Medicine
                         <br/> Founder, Director, CEO, Precision Theranostics Inc., Baltimore, MD, USA.  
                         <br/> President, CEO, VIJ Biotech, Baltimore, MD, USA.    
                         </p>
